www/territopple.css
/* @import url("./render-css/con.css"); */
body {
    /* background-color: #ffffff; */
    --blink-light: #fff;
}
#title-text {
    max-width: 80vw;
}
#display-settings {
    margin-bottom: 10px;
    max-width: 500px;
}
#settings-expand-label {
    font-size: 20px;
    float: right;
    user-select: none;
    cursor: pointer;
    margin-left: 0.5em;
}
#board-zoom {
    vertical-align: middle;
}
#container-container, .container-container {
    width: fit-content;
    /* border: solid black 2px; */
    overflow: hidden;
}
#row-container {
    display: flex;
    justify-content: space-between;
    /* display: grid; */
    /* grid-template-columns: 1fr 1fr; */
}
#joined-table {
    height: fit-content;
}
#joined-table > tbody > tr > td:nth-child(3) {
    text-align: center;
    font-family: monospace;
}
#joined-table .JLIST-id {
    max-width: 15ch;
    overflow-x: clip;
    text-wrap-mode: nowrap;
}
#joined-table .JLIST-id:hover {
    text-wrap-mode: wrap;
}
table {
    border-collapse: collapse;
    border: 3px solid #888888;
}
th, tr, td {
    border: 1px solid #888888;
    padding: 5px;
}
.container {
    display: grid;
    border: solid black 2px;
    grid-template-columns: repeat(var(--ncols), fit-content(100%));
    grid-template-rows: repeat(var(--nrows), fit-content(100%));
    /* --ssize: round(down, calc(var(--tile-font-size) * 1.5), 1); */
    --ssize: calc(var(--tile-font-size) * 1.5);
    width: calc(var(--ssize) * 1px * var(--ncols));
    height: calc(var(--ssize) * 1px * var(--nrows));
    font-family: monospace, monospace;
    --tile-font-size: 32;
    /* --iv-tfs-1: round(down, calc(var(--tile-font-size) * 1.5), 1); */
    font-size: calc(var(--tile-font-size) * 1px);
    user-select: none;
    --tile-hover: #0000001f;
    --tile-last-move: #aaaaaa1f;
    --tile-volatile: #dddddd1f;
    transform: scale(var(--pan-zoom), var(--pan-zoom)) translate(calc(var(--pan-x) * 1px), calc(var(--pan-y) * 1px));
    &.no-input {
        pointer-events: none;
        cursor: pointer;
        background-color: #0000001f !important;
    }
}
.container > canvas {
    width: calc(var(--tile-font-size) * var(--ncols) * 1.5px);
    height: calc(var(--tile-font-size) * var(--nrows) * 1.5px);

    &.pcanvas {
        z-index: 1;
    }
    &.hcanvas {
        z-index: 2;
        position: absolute;
        pointer-events: none;
    }
}
.container > svg {
    width: calc(var(--tile-font-size) * var(--ncols) * 1.5px);
    height: calc(var(--tile-font-size) * var(--nrows) * 1.5px);
    --l-tile-hover: rgb(from var(--tile-hover) r g b / 1);
    --volatile-mul: 1;
    --volatile-add: 0;
    --lm-contrib: 35%;
    --main-contrib: 75%;
    --vol-contrib: 25%;
    --hov-contrib: 15%;
}
.container > svg > defs > g > rect:last-child {
    fill: var(--color);
}
.container > svg > defs > g > rect:first-child {
    /* fill: color-mix(in srgb, var(--h-color, transparent) 50%, transparent); */
    --c: rgb(from var(--h-color) r g b / 0.25);
    fill: var(--c, revert-layer);
}
.container > svg > use {
    --l-alpha-tweak: var(--alpha-tweak);
    --base: rgb(from var(--color) r g b / var(--l-alpha-tweak));
    --lm-amt: 0%;
    --vol-amt: 0%;
    --hov-amt: 0%;
    /* fill: color-mix(in srgb, var(--base) var(--main-contrib), var(--tile-last-move) var(--lm-amt)); */
    fill: color-mix(in srgb, color-mix(in srgb, var(--base) var(--main-contrib), var(--l-tile-hover) var(--hov-amt)), var(--tile-last-move) var(--lm-amt));
    /* fill: color-mix(in srgb, color-mix(in srgb, color-mix(in srgb, var(--tile-last-move) var(--lm-amt), var(--tile-hover) var(--hov-amt)), var(--tile-volatile) var(--vol-amt)), var(--base) var(--main-contrib)); */
}
.container > div, .container > x-concentric-tile {
    color: #000000;
    display: flex;
    align-items: center;
    justify-content: center;
}
.container > div {
    width: 1.5em;
    height: 1.5em;
}
.container > div > div {
    pointer-events: none;
}
.container:hover {
    cursor: pointer;
}
.container.tile-hover > div:hover, .container.tile-hover > x-concentric-tile:hover {
    background: var(--tile-hover) !important;
}
.container.tile-hover > svg > use:hover {
    /* fill: var(--tile-hover); */
    --hov-amt: var(--hov-contrib);
    --h-color: var(--color);
}
/* .container.volatiles > div.volatile, .container.volatiles > x-concentric-tile.volatile { */
.container.volatiles > div.volatile {
    background: var(--tile-volatile);
}
.container.volatiles > svg > use.volatile {
    --l-alpha-tweak: clamp(0, calc(var(--alpha-tweak) * var(--volatile-mul) + var(--volatile-add)), 1);
    --vol-amt: var(--vol-contrib);
    /* fill: var(--tile-hover); */
}
.container > svg > use.last-move {
    --lm-amt: var(--lm-contrib);
}
/* .container.last-move-enabled > div.last-move, .container.last-move-enabled > x-concentric-tile.last-move { */
.container.last-move-enabled > div.last-move {
    background: var(--tile-last-move);
}

span#underboard-container {
    display: flex;
    justify-content: space-between;
}

span#underboard-left, span#underboard-right {
    max-width: 50%;
}

span#turn-time {
    font-family: monospace;
}

svg#render {
    width: 100%;
    height: 100%;
}
@keyframes blink {
    0%, 49% {background: var(--blink-light);}
    50%, 100% {background: var(--blink-dark);}
}
@keyframes blink2 {
    0%, 49% {background: var(--blink-dark);}
    50%, 100% {background: var(--blink-light);}
}
.blink {
    animation: blink var(--blink-dur, 0.5s) linear var(--blink-count, 3) alternate;
}
.blink2 {
    animation: blink var(--blink-dur, 0.5s) linear var(--blink-count, 3) forwards;
}

.modal {
    position: fixed;
    left: 0px;
    top: 0px;
    width: 100vw;
    height: 100vh;
    z-index: 10;
    background-color: #88888888;
}
.modal > div {
    position: fixed;
    left: 50vw;
    top: 50vh;
    transform: translate(-50%, -50%);
    background-color: #888888;
    border: solid 2px white;
}
#bots-popup {
    position: fixed;
    left: 0px;
    top: 0px;
    width: 100vw;
    height: 100vh;
    z-index: 10;
    background-color: #88888888;
}
#bots-popup > div {
    display: flex;
    flex-direction: column;
    position: fixed;
    left: 50vw;
    top: 50vh;
    transform: translate(-50%, -50%);
    background-color: #888888;
    border: solid 2px white;
}
#bots-popup > div > * {
    /* margin-left: 5px;
    margin-right: 5px; */
    margin: 5px;
}

x-concentric-tile {
    --l-alpha-tweak: calc(3 / 5);
    --bw: 1px;
    /* border: solid var(--bw) black; */
    border-style: solid;
    border-width: var(--bw);
    width: calc(1.5em - var(--bw) * 2);
    height: calc(1.5em - var(--bw) * 2);
}
x-concentric-tile div {
    --size: 73.91%;
    width: var(--size);
    height: var(--size);
    /* width: min(90%, calc(100% - 12px));
    height: min(90%, calc(100% - 12px)); */
    /* border: solid 1px black; */
    border-style: solid;
    border-width: 1px;
    display: flex;
    align-items: center;
    justify-content: center;
    pointer-events: none;
}
x-concentric-tile > div > div {
    --size: 64.71%;
}
x-concentric-tile > div > div > div {
    --size: 45.45%;
}
x-concentric-tile div:not(:has(> *)) {
    background: var(--color) !important;
}
.container.last-move-enabled > x-concentric-tile.last-move div:not(:has(> *)) {
    /* border-color: var(--tile-last-move); */
    border-color: rgb(from var(--tile-last-move) r g b / 1);
}
.container.volatiles > x-concentric-tile.volatile {
    border-color: rgb(from var(--tile-volatile) r g b / 1);
    --bw: 1px;
}
.con-active {
    /* background: var(--color) !important; */
    /* background: var(--color); */
    background: rgb(from var(--color) r g b / var(--l-alpha-tweak));
}

#pan-zoom-slider, #pan-reset-button {
    writing-mode: vertical-lr;
    transform: rotate(180deg);
}
#play-container {
    display: flex;
}
#clip-container {
    width: fit-content;
    height: fit-content;
    overflow: hidden;
}

#pan-zoom-container {
    margin-right: 0.025in;
}
@media (any-pointer: coarse) {
    #pan-zoom-container {
        margin-right: 0.125in;
    }
}

